--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,49 @@
 #header-img{
-  width: 70px;
-  height: 70px;
+  width: 100px;
+  height: 100px;
 }
 #nav-bar{
   float:right;
-  display: flex;
-  justify-content: space-evenly;
+  position: fixed;
+  top: 0;
+  right: 0;
+}
+.nav-link{
+  margin-right: 10px;
 }
 .header{
   display: flex;
+  
+}
+button{
+  padding: 5px;
+  background-color: yellowgreen;
+  color: black;
+  width: 200px;
+  border-radius: 5px;
+  margin-top: 10px;
+}
+#form{
+  display: flex;
+  flex-direction: column;
+  padding: 3px;
+}
+.video{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+}
+.section{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  width: 40%;
+  margin: auto;
+}
+@media screen and (min-width: 1024px) {
+  button {
+    background-color: red;
+  }
 }
